# RONA

./: .gitignore  README.md
Arduino_RONA/: commands.h  motor_driver.h  prueba_motores.ino
Arduino_RONA/MainCode/: ArduinoBridge.ino  EncoderValues.h  EncoderValues.ino  MainCode.ino  Motor.ino  MotorController.h  MotorController.ino  MotorsController.ino  PIDController.h  PIDController.ino  commands.h  encoder.h  encoder.ino  motor.h  motor.ino  motor_pins.h  motors_controller.h  motors_controller.ino
Arduino_RONA/motor_driver_v2/: ROSArduinoBridge.ino  motor_driver.ino  motor_driver_v2.ino
Development_Logs/: 1-Template.md  2024-05-05.md  2024-05-06.md  2024-05-07.md  2024-05-19.md  2024-05-23.md  2024-06-04.md  2025-06-09.md
ROS2_RONA/rona_communication/: package.xml  setup.cfg  setup.py
ROS2_RONA/rona_controller/: CMakeLists.txt  package.xml
ROS2_RONA/rona_robot/: CMakeLists.txt  package.xml
ROS2_RONA/simple_rona_robot/: CMakeLists.txt  package.xml
ROS2_RONA/simple_rona_robot/launch/: ball_tracker.launch.py  gazebo.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  test_display.launch.py
ROS2_RONA/simple_rona_robot/rviz/: display.rviz
ROS2_RONA/simple_rona_robot/simple_description/: front_left_wheel.xacro  front_right_wheel.xacro  physical_properties.xacro  rear_left_wheel.xacro  rear_right_wheel.xacro  robot_core.xacro  roller.xacro  rona_gazebo.xacro  wheel.xacro
UML_Diagrams/RONA_UML/: 128009.diagram  9.session  RONA_UML.prj
(+26 files in other folders)
